# lollipop-launcher

./: .deepsource.toml  .editorconfig  .gitignore  CONTRIBUTING.md  index.d.ts  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.mts  vite.config.ts
locales/en/: common.yml  debug.yml  main.yml  versions.yml
locales/zhcn/: common.yml  debug.yml  main.yml  versions.yml
src/: App.tsx  bindings.ts  index.tsx  samples.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: store-context.tsx
src/components/debug/: AlertBar.tsx  Error.tsx  index.tsx
src/components/router/: navigation-bar.tsx
src/i18n/: index.ts
src/pages/main/: index.tsx  launch-button.tsx  version-selector.tsx  welcome-message.tsx
src/pages/main/components/: minecraft-avatar.tsx  version-selector.tsx  welcome-message.tsx
src/pages/module/: index.tsx
src/pages/setting/: index.tsx
src/public/: index.html  style.css
src/route/: index.tsx  main.tsx  module.tsx  setting.tsx
src/store/: index.ts  main.ts  version.ts
src/types/: i18n.ts
src/util/: i18n.ts  version.ts
