[package]
name = "lollipop-app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "zeithrold <zeithrold@gmail.com>" ]
license = "BSD-3-Clause"
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lollipop_app"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "2.0.0-beta.22", features = [] }
specta = "2.0.0-rc.12"
tauri-specta = { version = "2.0.0-rc.11", features = [
  "javascript",
  "typescript"
] }
